# Lavender

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  GOALS.md  LICENSE  README.md  docker-compose.test.yaml  docker-compose.yml  execve.bpf.c  lavender.toml
agent/: Cargo.toml  build.rs
agent/src/: bootstrap.rs  config.rs  conn_handler.rs  correlator.rs  detection.rs  event_loop.rs  exec_handler.rs  exit_handler.rs  lib.rs  main.rs  open_handler.rs  output.rs  publisher.rs  response.rs  runtime.rs  scorer.rs  transport.rs  users.rs
agent/src/correlator/: mod.rs  rules.rs
agent/src/detection/: mod.rs  path.rs
agent/src/handlers/: conn.rs  exec.rs  exit.rs  mod.rs  open.rs
agent/src/output/: format.rs  mod.rs
agent/src/runtime/: alert_pipeline.rs  ancestry.rs  mod.rs
agent/tests/: correlator_tests.rs  detection_tests.rs  runtime_state_tests.rs  scorer_tests.rs
common/: Cargo.toml
common/src/: canonical.rs  lib.rs  transport.rs
db/init/: 001_init.sql  002_alerts.sql
docker/: README.md
docker/agent/: Dockerfile  lavender.docker.toml
docker/alert-writer/: Dockerfile
docker/compose/: README.md
docker/control-plane/: Dockerfile
docker/detection/: Dockerfile
docker/ingest/: Dockerfile
docker/nats/: README.md  compose.yml  nats-server.conf
docker/telemetry-writer/: Dockerfile
docs/: CONFIGURATION.md  EVENT_STREAMS_AND_INTERFACES.md  ROADMAP.md
ebpf/: .gitignore  Makefile  execve.bpf.c
frontend/: .dockerignore  index.html  vite.config.ts
frontend/src/: App.tsx  (+1 more)
lavender-ebpf/: Cargo.toml  rust-toolchain.toml
(+69 files in other folders)
