[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
aya          = { version = "0.12", features = ["async_tokio"] }
aya-log      = "0.2"
common       = { path = "../common" }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"